// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scoreFund — fixture 'AXIS_BLUECHIP_DIRECT_GROWTH' > produces a deterministic ScoreResult snapshot for AXIS_BLUECHIP_DIRECT_GROWTH 1`] = `
{
  "inputHash": "ecf1777f72ac6c93c57c79810e0327079247db746f05368135778bce3ff38403",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "returns",
      "pillarScore": "0.8800",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsBenchmark",
          "normalisedScore": "0.0000",
          "source": "returns.fundExcess3yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsCategory",
          "normalisedScore": "2.0000",
          "source": "returns.fundExcess3yVsCategory",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsBenchmark",
          "normalisedScore": "0.0000",
          "source": "returns.fundExcess5yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsCategory",
          "normalisedScore": "2.4000",
          "source": "returns.fundExcess5yVsCategory",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "0.3080",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk-adjusted",
      "pillarScore": "4.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sharpe3y",
          "normalisedScore": "4.4000",
          "source": "risk.sharpe3y",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sortino3y",
          "normalisedScore": "3.6000",
          "source": "risk.sortino3y",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.2500",
      "weightedContribution": "1.0000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "consistency",
      "pillarScore": "2.8000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "quartileStability",
          "normalisedScore": "0.0000",
          "source": "consistency.quartileStability",
          "weightWithinPillar": "0.6000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "downsideCapture",
          "normalisedScore": "7.0000",
          "source": "consistency.downsideCapture",
          "weightWithinPillar": "0.4000",
        },
      ],
      "weight": "0.1500",
      "weightedContribution": "0.4200",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "costs",
      "pillarScore": "2.4000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "expenseRatio",
          "normalisedScore": "2.4000",
          "source": "costs.expenseRatio",
          "weightWithinPillar": "1.0000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.2400",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "manager",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "currentManagerTenureYears",
          "normalisedScore": "10.0000",
          "source": "manager.tenure",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "managerMedianCagr3yExcess",
          "normalisedScore": "10.0000",
          "source": "manager.medianCagr3yExcess",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "1.0000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "portfolio",
      "pillarScore": "7.0000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "top10HoldingsPctOfAum",
          "normalisedScore": "7.0000",
          "source": "portfolio.top10HoldingsPctOfAum",
          "weightWithinPillar": "0.4000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "sectorTiltAbsolutePct",
          "normalisedScore": "7.0000",
          "source": "portfolio.sectorTiltAbsolutePct",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "annualTurnoverPct",
          "normalisedScore": "7.0000",
          "source": "portfolio.annualTurnoverPct",
          "weightWithinPillar": "0.3000",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.3500",
    },
  ],
  "score": 3.3,
  "scoringEngineVersion": "0.1.0",
  "verdict": "WEAK_SCORE",
}
`;

exports[`scoreFund — fixture 'HDFC_FLEXICAP_DIRECT_GROWTH' > produces a deterministic ScoreResult snapshot for HDFC_FLEXICAP_DIRECT_GROWTH 1`] = `
{
  "inputHash": "87c2df718f2b4addf23c685139c8e5ebb1bbe1f4ae548faf933d8c0b5a146fd2",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "returns",
      "pillarScore": "6.4000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsBenchmark",
          "normalisedScore": "6.8000",
          "source": "returns.fundExcess3yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsCategory",
          "normalisedScore": "6.8000",
          "source": "returns.fundExcess3yVsCategory",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsBenchmark",
          "normalisedScore": "6.0000",
          "source": "returns.fundExcess5yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsCategory",
          "normalisedScore": "6.0000",
          "source": "returns.fundExcess5yVsCategory",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "2.2400",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk-adjusted",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sharpe3y",
          "normalisedScore": "10.0000",
          "source": "risk.sharpe3y",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sortino3y",
          "normalisedScore": "10.0000",
          "source": "risk.sortino3y",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.2500",
      "weightedContribution": "2.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "consistency",
      "pillarScore": "7.6000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "quartileStability",
          "normalisedScore": "10.0000",
          "source": "consistency.quartileStability",
          "weightWithinPillar": "0.6000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "downsideCapture",
          "normalisedScore": "4.0000",
          "source": "consistency.downsideCapture",
          "weightWithinPillar": "0.4000",
        },
      ],
      "weight": "0.1500",
      "weightedContribution": "1.1400",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "costs",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "expenseRatio",
          "normalisedScore": "10.0000",
          "source": "costs.expenseRatio",
          "weightWithinPillar": "1.0000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "1.0000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "manager",
      "pillarScore": "8.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "currentManagerTenureYears",
          "normalisedScore": "10.0000",
          "source": "manager.tenure",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "managerMedianCagr3yExcess",
          "normalisedScore": "6.0000",
          "source": "manager.medianCagr3yExcess",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.8000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "portfolio",
      "pillarScore": "7.0000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "top10HoldingsPctOfAum",
          "normalisedScore": "7.0000",
          "source": "portfolio.top10HoldingsPctOfAum",
          "weightWithinPillar": "0.4000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "sectorTiltAbsolutePct",
          "normalisedScore": "7.0000",
          "source": "portfolio.sectorTiltAbsolutePct",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "annualTurnoverPct",
          "normalisedScore": "7.0000",
          "source": "portfolio.annualTurnoverPct",
          "weightWithinPillar": "0.3000",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.3500",
    },
  ],
  "score": 8,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;

exports[`scoreFund — fixture 'MIRAE_LARGECAP_DIRECT_GROWTH' > produces a deterministic ScoreResult snapshot for MIRAE_LARGECAP_DIRECT_GROWTH 1`] = `
{
  "inputHash": "5878ddcce57a97cf90a1500ef210d5911fe52930cb3ec5925da8a0524cf3c7fe",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "returns",
      "pillarScore": "4.8800",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsBenchmark",
          "normalisedScore": "4.4000",
          "source": "returns.fundExcess3yVsBenchmark",
          "weightWithinPillar": "0.6000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsCategory",
          "normalisedScore": "5.6000",
          "source": "returns.fundExcess3yVsCategory",
          "weightWithinPillar": "0.4000",
        },
        {
          "direction": "higher",
          "isAbsent": true,
          "isFallback": false,
          "name": "fundExcess5yVsBenchmark",
          "normalisedScore": "0.0000",
          "source": "returns.fundExcess5yVsBenchmark",
          "weightWithinPillar": "0.0000",
        },
        {
          "direction": "higher",
          "isAbsent": true,
          "isFallback": false,
          "name": "fundExcess5yVsCategory",
          "normalisedScore": "0.0000",
          "source": "returns.fundExcess5yVsCategory",
          "weightWithinPillar": "0.0000",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "1.7080",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk-adjusted",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sharpe3y",
          "normalisedScore": "10.0000",
          "source": "risk.sharpe3y",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sortino3y",
          "normalisedScore": "10.0000",
          "source": "risk.sortino3y",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.2500",
      "weightedContribution": "2.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "consistency",
      "pillarScore": "8.8000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "quartileStability",
          "normalisedScore": "10.0000",
          "source": "consistency.quartileStability",
          "weightWithinPillar": "0.6000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "downsideCapture",
          "normalisedScore": "7.0000",
          "source": "consistency.downsideCapture",
          "weightWithinPillar": "0.4000",
        },
      ],
      "weight": "0.1500",
      "weightedContribution": "1.3200",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "costs",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "expenseRatio",
          "normalisedScore": "10.0000",
          "source": "costs.expenseRatio",
          "weightWithinPillar": "1.0000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "1.0000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "manager",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "currentManagerTenureYears",
          "normalisedScore": "10.0000",
          "source": "manager.tenure",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "managerMedianCagr3yExcess",
          "normalisedScore": "10.0000",
          "source": "manager.medianCagr3yExcess",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "1.0000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "portfolio",
      "pillarScore": "7.0000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "top10HoldingsPctOfAum",
          "normalisedScore": "7.0000",
          "source": "portfolio.top10HoldingsPctOfAum",
          "weightWithinPillar": "0.4000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "sectorTiltAbsolutePct",
          "normalisedScore": "7.0000",
          "source": "portfolio.sectorTiltAbsolutePct",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "annualTurnoverPct",
          "normalisedScore": "7.0000",
          "source": "portfolio.annualTurnoverPct",
          "weightWithinPillar": "0.3000",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.3500",
    },
  ],
  "score": 7.9,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;

exports[`scoreFund — fixture 'PARAG_PARIKH_FLEXICAP_DIRECT_GROWTH' > produces a deterministic ScoreResult snapshot for PARAG_PARIKH_FLEXICAP_DIRECT_GROWTH 1`] = `
{
  "inputHash": "743f06e81e2fafe8821fc05e526ee5a5c0996cebfacb773a6f4e10402b658f41",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "returns",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsBenchmark",
          "normalisedScore": "10.0000",
          "source": "returns.fundExcess3yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsCategory",
          "normalisedScore": "10.0000",
          "source": "returns.fundExcess3yVsCategory",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsBenchmark",
          "normalisedScore": "10.0000",
          "source": "returns.fundExcess5yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsCategory",
          "normalisedScore": "10.0000",
          "source": "returns.fundExcess5yVsCategory",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "3.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk-adjusted",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sharpe3y",
          "normalisedScore": "10.0000",
          "source": "risk.sharpe3y",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sortino3y",
          "normalisedScore": "10.0000",
          "source": "risk.sortino3y",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.2500",
      "weightedContribution": "2.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "consistency",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "quartileStability",
          "normalisedScore": "10.0000",
          "source": "consistency.quartileStability",
          "weightWithinPillar": "0.6000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "downsideCapture",
          "normalisedScore": "10.0000",
          "source": "consistency.downsideCapture",
          "weightWithinPillar": "0.4000",
        },
      ],
      "weight": "0.1500",
      "weightedContribution": "1.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "costs",
      "pillarScore": "7.2000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "expenseRatio",
          "normalisedScore": "7.2000",
          "source": "costs.expenseRatio",
          "weightWithinPillar": "1.0000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.7200",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "manager",
      "pillarScore": "8.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "currentManagerTenureYears",
          "normalisedScore": "10.0000",
          "source": "manager.tenure",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "managerMedianCagr3yExcess",
          "normalisedScore": "6.0000",
          "source": "manager.medianCagr3yExcess",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.8000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "portfolio",
      "pillarScore": "7.0000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "top10HoldingsPctOfAum",
          "normalisedScore": "7.0000",
          "source": "portfolio.top10HoldingsPctOfAum",
          "weightWithinPillar": "0.4000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "sectorTiltAbsolutePct",
          "normalisedScore": "7.0000",
          "source": "portfolio.sectorTiltAbsolutePct",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "annualTurnoverPct",
          "normalisedScore": "7.0000",
          "source": "portfolio.annualTurnoverPct",
          "weightWithinPillar": "0.3000",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.3500",
    },
  ],
  "score": 9.4,
  "scoringEngineVersion": "0.1.0",
  "verdict": "STRONG_SCORE",
}
`;

exports[`scoreFund — fixture 'SBI_SMALLCAP_DIRECT_GROWTH' > produces a deterministic ScoreResult snapshot for SBI_SMALLCAP_DIRECT_GROWTH 1`] = `
{
  "inputHash": "09925b56a8c8539c10694770cc4e86011cdf09132f8628707ab6aa41161217d8",
  "pillars": [
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "returns",
      "pillarScore": "7.8400",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsBenchmark",
          "normalisedScore": "10.0000",
          "source": "returns.fundExcess3yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess3yVsCategory",
          "normalisedScore": "8.0000",
          "source": "returns.fundExcess3yVsCategory",
          "weightWithinPillar": "0.2000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsBenchmark",
          "normalisedScore": "6.8000",
          "source": "returns.fundExcess5yVsBenchmark",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "fundExcess5yVsCategory",
          "normalisedScore": "6.0000",
          "source": "returns.fundExcess5yVsCategory",
          "weightWithinPillar": "0.2000",
        },
      ],
      "weight": "0.3500",
      "weightedContribution": "2.7440",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "risk-adjusted",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sharpe3y",
          "normalisedScore": "10.0000",
          "source": "risk.sharpe3y",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "sortino3y",
          "normalisedScore": "10.0000",
          "source": "risk.sortino3y",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.2500",
      "weightedContribution": "2.5000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "consistency",
      "pillarScore": "6.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "quartileStability",
          "normalisedScore": "10.0000",
          "source": "consistency.quartileStability",
          "weightWithinPillar": "0.6000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "downsideCapture",
          "normalisedScore": "0.0000",
          "source": "consistency.downsideCapture",
          "weightWithinPillar": "0.4000",
        },
      ],
      "weight": "0.1500",
      "weightedContribution": "0.9000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "costs",
      "pillarScore": "10.0000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "expenseRatio",
          "normalisedScore": "10.0000",
          "source": "costs.expenseRatio",
          "weightWithinPillar": "1.0000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "1.0000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "manager",
      "pillarScore": "3.0000",
      "subFactors": [
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": true,
          "name": "currentManagerTenureYears",
          "normalisedScore": "6.0000",
          "source": "manager.tenure",
          "weightWithinPillar": "0.5000",
        },
        {
          "direction": "higher",
          "isAbsent": false,
          "isFallback": false,
          "name": "managerMedianCagr3yExcess",
          "normalisedScore": "0.0000",
          "source": "manager.medianCagr3yExcess",
          "weightWithinPillar": "0.5000",
        },
      ],
      "weight": "0.1000",
      "weightedContribution": "0.3000",
    },
    {
      "fallbackReason": null,
      "isFallback": false,
      "pillar": "portfolio",
      "pillarScore": "7.3000",
      "subFactors": [
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "top10HoldingsPctOfAum",
          "normalisedScore": "10.0000",
          "source": "portfolio.top10HoldingsPctOfAum",
          "weightWithinPillar": "0.4000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "sectorTiltAbsolutePct",
          "normalisedScore": "7.0000",
          "source": "portfolio.sectorTiltAbsolutePct",
          "weightWithinPillar": "0.3000",
        },
        {
          "direction": "lower",
          "isAbsent": false,
          "isFallback": false,
          "name": "annualTurnoverPct",
          "normalisedScore": "4.0000",
          "source": "portfolio.annualTurnoverPct",
          "weightWithinPillar": "0.3000",
        },
      ],
      "weight": "0.0500",
      "weightedContribution": "0.3650",
    },
  ],
  "score": 7.8,
  "scoringEngineVersion": "0.1.0",
  "verdict": "CAUTION",
}
`;
